# uru-ai-apace-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aiuru/: api.py  cli.py  config.py  editor.py  ui.py
